# Bottle_cap_color_classifier

./: .dockerignore  .pylintrc  Bottle_cap_classifier.ipynb  Dockerfile  README.md  pyproject.toml  requirements.txt  settings.yaml
.github/workflows/: ci.yml
bsort/: cli.py  infer.py  train.py  utils.py
dataset/: data.yaml
dataset/test/labels/: raw-250110_dc_s001_b2_15_jpg.rf.2c664874c5790cce5b17eba18acd4458.txt  raw-250110_dc_s001_b5_3_jpg.rf.0397e1d00b0bc7e377ea6bc44dee8245.txt
dataset/train/: labels.cache
dataset/train/labels/: raw-250110_dc_s001_b2_1_jpg.rf.aac75c5dc09edc87c815d3760f3176c5.txt  raw-250110_dc_s001_b2_1_jpg.rf.c2f77429072aba26f48d811bab64e309.txt  raw-250110_dc_s001_b2_1_jpg.rf.c95869411fa579632e5672875ca6b1a9.txt  raw-250110_dc_s001_b3_2_jpg.rf.5fa3064cf296d40f212e5a6f91a1eb79.txt  raw-250110_dc_s001_b3_2_jpg.rf.8ca646f8d9aa22eb048636e6f07bec79.txt  raw-250110_dc_s001_b3_2_jpg.rf.a82fe413a2f7c5a05a8f8fac0e59c3e9.txt  raw-250110_dc_s001_b3_3_jpg.rf.514ae2f57b982d79dd17f79fcbb22459.txt  raw-250110_dc_s001_b3_3_jpg.rf.58ceefa2c6b9a0ca1e3abb5f2b170266.txt  raw-250110_dc_s001_b3_3_jpg.rf.a7968e43b0132b9029b1fd837c97c8d8.txt  raw-250110_dc_s001_b3_4_jpg.rf.1aad9bf2a728ce103db0a35ae2278a75.txt  raw-250110_dc_s001_b3_4_jpg.rf.26265df3685c1063b33ba14929b90e00.txt  raw-250110_dc_s001_b3_4_jpg.rf.608ae4c6f3ab0d758a262f4af7b2c8b5.txt  raw-250110_dc_s001_b4_1_jpg.rf.3bdb3f60ef43d270afdb4ed51292e0db.txt  raw-250110_dc_s001_b4_1_jpg.rf.7071450bb04be0a30374ae38d8513b84.txt  raw-250110_dc_s001_b4_1_jpg.rf.ceaab1ba2c57aebda187861e2f533f5d.txt  raw-250110_dc_s001_b4_2_jpg.rf.6fd890c44aeff35ee2df83e0624b9ecc.txt  raw-250110_dc_s001_b4_2_jpg.rf.8dd4539d31a4dde7b9bffe76ad9a3411.txt  raw-250110_dc_s001_b4_2_jpg.rf.faefe7571e62924bd2830a11d56ead62.txt  raw-250110_dc_s001_b5_2_jpg.rf.7be4b41627a2ac9d940f689957dd05ba.txt  raw-250110_dc_s001_b5_2_jpg.rf.94850eb2943dfb6cd306d1f8aaf9f7cd.txt  raw-250110_dc_s001_b5_2_jpg.rf.9cf3f57925466e7a7bad6aaabcc6e97e.txt
dataset/valid/: labels.cache
task_1_cap_detection/: Bottle_cap_classifier.ipynb  bottle_cap_data.ods  bottle_cap_data_experiment_log.ods
wandb/run-20251119_183610-f0obesnb/: run-f0obesnb.wandb
wandb/run-20251119_183657-txeyivn2/: run-txeyivn2.wandb
wandb/run-20251119_184052-vv8jyk0i/: run-vv8jyk0i.wandb
wandb/run-20251119_184253-fymq8zyw/: run-fymq8zyw.wandb
wandb/run-20251119_184253-fymq8zyw/files/: config.yaml  wandb-metadata.json
wandb/run-20251119_185111-57z27sap/: run-57z27sap.wandb
wandb/run-20251119_185300-is035xh6/: run-is035xh6.wandb
wandb/run-20251119_185417-g15ov99s/: run-g15ov99s.wandb
wandb/run-20251119_185602-7fustyo9/: run-7fustyo9.wandb
(+14 files in other folders)
