[tool.poetry]
name = "bsort"
version = "0.1.0"
description = "Bottle Cap Color Classifier CLI with training and inference."
authors = ["Fajar KKP <f.kenichi.kp@gmail.com>"]
readme = "README.md"
packages = [{ include = "bsort" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
ultralytics = "^8.3.229"
opencv-python = "*"
numpy = "*"
pyyaml = "*"
wandb = "^0.15.4"

# Use *CPU* version of PyTorch (much smaller, avoids CUDA)
torch = { version = "^2.9.1", source = "pytorch-cpu" }

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

# ------------------ Development dependencies ------------------ #
[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "*"
isort = "*"
pylint = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# ------------------ Tool Configs ------------------ #
[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
