[tool.poetry]
name = "bsort"
version = "0.1.0"
description = "Bottle Cap Color Classifier CLI with training and inference."
authors = ["Fajar KKP <f.kenichi.kp@gmail.com>"]
readme = "README.md"
packages = [{ include = "bsort" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
numpy = "<2.0"
pyyaml = "*"
opencv-python-headless = "*"

# NOTE:
# Torch is NOT listed here to avoid double installation.
# It is installed manually in Docker.

[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "*"
isort = "*"
pylint = "*"
ultralytics = "^8.3.229"
wandb = "^0.15.12"
# For full training GUI support (optional):
# opencv-python = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
